# django-literature

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  conf.py  docker-compose.yml  index.rst  installation.rst  literature.api.rst  literature.migrations.rst  literature.rst  literature.test_utils.test_app.migrations.rst  manage.py  package-lock.json  package.json  playground.py  pyproject.toml  requirements.txt  requirements_dev.txt  runtests.py  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-docs.yml  main.yml  on-release-main.yml  static.yml
_build/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  literature.adaptors.html  literature.api.html  literature.html  literature.migrations.html  literature.templatetags.html  literature.test_utils.html  literature.test_utils.test_app.html  literature.test_utils.test_app.migrations.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
_build/.doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  literature.adaptors.doctree  literature.api.doctree  literature.doctree  literature.migrations.doctree  literature.templatetags.doctree  literature.test_utils.doctree  literature.test_utils.test_app.doctree  literature.test_utils.test_app.migrations.doctree  modules.doctree  readme.doctree  usage.doctree
_build/_modules/: index.html
_build/_modules/literature/: admin.html  apps.html  choices.html  conf.html  exceptions.html  fields.html  managers.html  models.html  utils.html  views.html  widgets.html
_build/_modules/literature/adaptors/: base.html  bibtex.html  crossref.html  datacite.html  ris.html
_build/_modules/literature/api/: serialize.html  views.html
_build/_modules/literature/migrations/: 0001_initial.html
_build/_modules/literature/templatetags/: literature.html
_build/_sources/: literature.adaptors.rst  usage.rst
assets/: webpack-stats.json
assets/src/: fetch.ts  form.ts  import.ts  literature.ts  replacer.js
assets/webpack/: common.config.js  prod.config.js
docker/: Dockerfile  django  docs
docs/: api.rst  api.serialize.rst  api.urls.rst  api.views.rst  conf.py  index.rst  literature.admin.rst  literature.api.rst  literature.api.serialize.rst  literature.api.urls.rst  literature.api.views.rst  literature.apps.rst  literature.choices.rst  literature.conf.rst  literature.csl_map.rst  literature.drf.rst  literature.exceptions.rst  literature.fields.rst  literature.forms.rst  literature.formset.rst  literature.managers.rst  literature.models.rst  literature.rst  literature.templatetags.literature.rst  literature.templatetags.rst  literature.test.rst  literature.test_utils.rst  literature.test_utils.test_app.rst  literature.urls.rst  literature.utils.rst  literature.views.rst  literature.widgets.rst  modules.rst  readme.md  templatetags.literature.rst  templatetags.rst  toc_api.rst  toc_literature.rst  toc_templatetags.rst
literature/: admin.py  apps.py  choices.py  conf.py  csl_map.py  drf.py  fields.py  filters.py  forms.py  forms_old.py  formset.py  formsets.py  loaders.py  managers.py  menus.py  models.py  querysets.py  receivers.py  settings.py  tables.py  urls.py  utils.py  views.py  views_formset.py  widgets.py
literature/adaptors/: __init__.py  base.py  bibtex.py  crossref.py  datacite.py  ris.py
literature/api/: serialize.py  urls.py  views.py
literature/forms/: __init__.py  fields.py  fieldsets.py  forms.py  layouts.py  widgets.py
literature/migrations/: 0001_initial.py  0002_alter_author_orcid_alter_author_family_and_more.py  0002_alter_literature_authors.py  0002_alter_literature_type.py  0002_remove_literature_event.py  0002_rename_key_literatureitem_citation_key.py  0003_alter_literatureitem_citation_key_and_more.py  0003_literature_custom_author.py  0004_alter_literatureitem_options.py
literature/static/bundles/js/: literature.js
literature/static/literature/js/: datatablesHyperlink.js  form.js  key-value-widget.js  main copy.js  main.js  select2-sortable2.js
literature/templates/: base.html
literature/templates/admin/: literature_add_from.html  literature_change_form.html
literature/templates/formset/bootstrap/: field_group.html
literature/templates/formset/default/: collection.html
literature/templates/literature/: author_detail.html  base.html  base_form.html  bibliography.html  import.html  index.html  literature_form.html  literature_formset.html  literature_list.html  literatureitem_confirm_delete.html  literatureitem_form.html  literatureitem_list.html  navbar.html  partial_date_field.html  search_modal.html
literature/templates/literature/admin/: change_list.html  search.html
literature/templates/widgets/: multiwidget.html
literature/templatetags/: literature.py
literature/utils/: __init__.py  csl.py  date.py  generic.py
src/: test.py
src/example/: settings.py  urls.py
src/example/templates/: base.html
src/litman/: admin.py  apps.py  choices.py  conf.py  models.py  querysets.py  utils.py  views.py
src/litman/adaptors/: base.py  crossref.py  datacite.py
src/litman/migrations/: 0001_initial.py  0002_rename_number_literature_issue.py  0003_alter_literature_author_str.py  0004_alter_literature_pdf.py
tests/: README.md  conftest.py  dev_urls.py  settings.py  test_adaptors.py  test_fields.py  test_forms.py  test_managers.py  test_models.py  test_utils.py  urls.py  wsgi.py
tests/data/: authors.json  csl-data copy.json  csl-data.json  csl-typeMap.xml  datacite.json  publication-csl.json  publication.bib  publication.ris
tests/example/: admin.py  forms.py  formsets.py  models.py  urls.py  views.py
tests/example/migrations/: 0001_initial.py  0002_alter_product_properties.py  0003_alter_product_properties.py
tests/example/templates/: base.html
tests/test_utils/: test_date.py
(+18 files in other folders)
